# KitchenGadget8000

./: .gitignore  CMakeLists.txt  README.md  kg8k.sh  normalize_recipe_tags.py  partitions.csv  sdkconfig.defaults  secrets.h.example  todo.md
components/apps/: BreadHydrationApp.cpp  CMakeLists.txt  ConverterApp.cpp  DishwasherApp.cpp  DrinkChillerApp.cpp  IngredientScalerApp.cpp  LauncherApp.cpp  LightingApp.cpp  MeatTemperaturesApp.cpp  NotesApp.cpp  RecipesApp.cpp  ScreensaverApp.cpp  ShoppingListApp.cpp  TimersApp.cpp  WeatherApp.cpp
components/apps/include/apps/: BreadHydrationApp.h  ConverterApp.h  DishwasherApp.h  DrinkChillerApp.h  IApp.h  IngredientScalerApp.h  LauncherApp.h  LightingApp.h  MeatTemperaturesApp.h  NotesApp.h  RecipesApp.h  ScreensaverApp.h  ShoppingListApp.h  TimersApp.h  WeatherApp.h
example/: index.html  launcher.html  recipes.html  styles.css  timers.html  weather.html
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
recipes/: adana_yogurtlu_kebab.md  agua_fresca.md  amritsari_dal.md  ants_climbing_a_tree.md  apple_cinnamon_buckwheat_porridge.md  apple_crisp.md  arancini_stuffed_rice_balls.md  asian_sesame_cabbage_slaw.md  asian_sesame_noodle_salad.md  asian_slaw_with_rice_vinegar.md  avocado_herb_cottage_toast.md  baked_apples_with_oat_crumble.md  baked_cod_with_tomatoes.md  baked_falafel_bowls_with_herb_sauce.md  baked_mac_and_cheese.md  baked_oatmeal_with_berries.md  baked_oatmeal_with_pear_hazelnut.md  baked_ziti.md  banana_bread.md  basic_vegan_nut_roast.md  bbq_chicken_pizza.md  bbq_chicken_sandwiches.md  (+428 more)
(+43 files in other folders)
